# hotel_reservation_system

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/hotel/: adapter.py  customer.py  factory.py  observers.py  reservation.py
tests/: conftest.py  test_customer.py  test_reservation.py
